switched to golang server, cleaned up files

--- a/static/index.html
+++ b/static/index.html
@@ -38,7 +38,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
 <script src="https://d3js.org/d3.v4.min.js"></script>
-<script src="static/src/app.js"></script>
-<script src="/static/src/shapes.js"></script>
-<script src="/static/src/shapeRenderer.js"></script>
+<script src="/src/app.js"></script>
+<script src="/src/shapes.js"></script>
+<script src="/src/shapeRenderer.js"></script>
 </html>
